app/assets/stylesheets/main.scss
h1 {

}

h2 {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 24px;
  color: #323639;
}

h3 {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 20px;
  color: #323639;
}

h4 {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 18px;
  color: #18639B;
  margin-bottom: 15px;
}

h5 {

}

h6 {

}

p {
 font-family: 'Open Sans', sans-serif;
 font-size: 14px;
 color: #323639;
}

a {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 20px;
  color: #CF0909;
}

table {
  width: 90%;
  margin-bottom: 30px;
}

.float-right {
  float: right;
}

.small-link {
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: 300;
  font-size: 16px;
  color: #CF0909;
}

.page-title {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 26px;
  color: #323639;
  padding-top: 20px;
  padding-bottom: 40px;
  text-align: center;
}

.page-subtitle {
  text-align: center;
  padding-top: 20px;
  padding-bottom: 15px;
}

label {
  font-family: 'Open Sans', sans-serif;
  font-size: 14px;
  color: #323639;
  padding-top: 15px;
  // padding-bottom: 5px;
}

label.required:after {
  content:" *";
  color: #CF0909;
}

label.conditionally-required:after {
  content:" *";
  color: #FFBF00;
}

.form-control {
  // max-width: 75%;
}

.btn-solid-red {
  background-color: #CF0909;
  font-family: 'Open Sans', sans-serif;
  color: #ffffff;
  margin-top: 10px;
  margin-bottom: 10px;
  border: 2px solid #CF0909;
}

.btn-solid-red:hover, .btn-outline-red:hover {
  background-color: #9C0606;
  color: #ffffff;
  border: 2px solid #9C0606;
}

.btn-solid-blue {
  background-color: #18639B;
  font-family: 'Open Sans', sans-serif;
  color: #ffffff;
  margin-top: 10px;
  margin-bottom: 10px;
  border: 2px solid #18639B;
}

.btn-solid-blue:hover, .btn-outline-blue:hover {
  background-color: #104369;
  color: #ffffff;
  border: 2px solid #104369;
}

.btn-outline-red {
  background-color: #ffffff;
  font-family: 'Open Sans', sans-serif;
  color: #CF0909;
  margin-top: 10px;
  margin-bottom: 10px;
  border: 2px solid #CF0909;
}

.btn-outline-blue {
  background-color: #F2F6F9;
  font-family: 'Open Sans', sans-serif;
  color: #18639B;
  margin-top: 10px;
  margin-bottom: 10px;
  border: 2px solid #18639B;
}

.alert-success, .alert-warning, .alert-danger, .alert-notice, .alert-alert {
  margin-left: auto;
  margin-right: auto;
  margin-top: -20px;
  padding-top: 10px;
  height: 40px;
  width: 100%;
  float: none;
  opacity: 0.7;
  text-align: center;
}

.alert-notice {
  background-color: #dff0d8;
  border-color: #d6e9c6;
}

.alert-alert {
  background-color: #f2dede;
  border-color: #ebccd1;
}

.basic-page {
  margin-left: 20px;
  margin-right: 20px;
  margin-bottom: 20px;
  padding-top: 20px;
}

.lead-text {
  margin-bottom: 20px;
  font-size: 18px;
  font-weight: 300;
  line-height: 1.4;
}


html {
  height: 100%;
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  position: relative;
  margin: 0;
  padding-bottom: 150px;
  min-height: 100%;
}

.page-container {

}

